2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (remove_all_of_style_from_list):
	(__simplify_style_list, blockor, blockand, blockunmask)
	(blockissubset, style_ids_are_equal, style_id_equals_id)
	(styles_have_same_id, fw_match_style_id)
	(one_fw_can_match_both_ids):
	(check_window_style_change):
	use int/0/1 instead of Bool/False/True

	* fvwm/move_resize.c (stick_across_pages):
	use False instead of FALSE

	* fvwm/style.c (fw_match_style_id):
	* fvwm/read.c (run_command_file, push_read_file):
	* fvwm/add_window.c (MappedNotOverride):
	* libs/wild.c (matchWildcards):
	use 0 and 1 instead of FALSE and TRUE

	* fvwm/fvwm.h:
	removed TRUE and FALSE

2006-08-07  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	FvwmPager !IconTitle style bugfix.

2006-07-31  Scott Smedley  <ss@aao.gov.au>

	* fvwm/fvwm.1.in:
	Updated description of Wait command in man page.

2006-07-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Flocale.c (FlocaleFontStructDrawString)
	(FlocaleRotateDrawString):
	(FlocaleDrawString):
	fixed drawing of forecolor/hilightfore

	* fvwm/ewmh_events.c (ewmh_WMStateFullScreen):
	always unmaximize and resize window when leaving fullscreen state,
	not just if it did not start as fullscreen

2006-07-17  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/fvwm.1.in (MenuStyle):
	added a reference to the prefered ! style negation flag,
	and listed the other deprecated negative forms in one place.
	(ActiveForeOff, AnimationOff, AutomaticHotkeysOff):
	(HilightBackOff, TitleWarpOff):
	changed to the ! negation form and listed as deprecated.
	(ActiveBack):
	removed relics from the man page

2006-07-19  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.18
	released 2.5.17

	* NEWS:
	* configure.ac:
	updated for 2.5.17 release

2006-07-17  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (__move_window):