@@ -1,5 +1,10 @@
 2006-08-09  Viktor Griph  <griph@dd.chalmers.se>
 
+	* FvwmPager/x_pager.c (MoveWindow): 
+	remove non-working icon-bug workaround
+
+2006-08-09  Viktor Griph  <griph@dd.chalmers.se>
+
 	* FvwmPager/x_pager.c (Scroll):
 	spacing
 	
