@@ -1,3 +1,8 @@
+2006-08-09  Viktor Griph  <griph@dd.chalmers.se>
+
+	* fvwm/move_resize.c (__move_icon): 
+	don't map icon windows for pictured icons on move
+
 2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* fvwm/style.c (remove_all_of_style_from_list):
